align center issues

--- a/css/hof.css
+++ b/css/hof.css
@@ -43,6 +43,11 @@ font-family: arial;
 font-size: 16px;
 }
 
+.desc {
+    font-size: 14px;
+    color: #EB2229;
+}
+
 
 
 
